--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
-    "test": "web-test-runner \"src/**/*.test.tsx\"",
+    "test": "web-test-runner --port 7890 \"src/**/*.test.tsx\"",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
     "lint": "prettier --check \"src/**/*.{js,jsx}\""
   },
   "dependencies": {
-    "preact": "^10.0.0"
+    "preact": "^10.0.0",
+    "svgo": "^1.3.2"
   },
   "devDependencies": {
     "@prefresh/snowpack": "^2.0.1",
@@ -15,6 +16,7 @@
     "@snowpack/plugin-typescript": "^1.1.1",
     "@snowpack/web-test-runner-plugin": "^0.1.5",
     "@testing-library/preact": "^2.0.0",
+    "@testing-library/preact-hooks": "^1.1.0",
     "@types/chai": "^4.2.14",
     "@web/test-runner": "^0.10.0",
     "chai": "^4.2.0",
