--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "lint": "prettier --check \"src/**/*.{js,jsx}\""
   },
   "dependencies": {
+    "@graphql-codegen/near-operation-file-preset": "^1.17.13",
+    "@material-ui/core": "^4.11.2",
     "preact": "^10.0.0",
     "svgo": "^1.3.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.19.4",
+    "@graphql-codegen/typescript": "^1.19.0",
+    "@graphql-codegen/typescript-operations": "^1.17.12",
     "@prefresh/snowpack": "^2.0.1",
     "@snowpack/plugin-dotenv": "^2.0.5",
     "@snowpack/plugin-typescript": "^1.1.1",
@@ -20,6 +25,7 @@
     "@types/chai": "^4.2.14",
     "@web/test-runner": "^0.10.0",
     "chai": "^4.2.0",
+    "graphql": "^15.4.0",
     "prettier": "^2.0.5",
     "snowpack": "^2.18.4",
     "typescript": "^4.0.3"
