--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "@graphql-codegen/near-operation-file-preset": "^1.17.13",
+    "@graphql-codegen/typescript-react-query": "^0.1.1",
     "@material-ui/core": "^4.11.2",
     "preact": "^10.0.0",
+    "react-query": "^3.4.0",
     "svgo": "^1.3.2"
   },
   "devDependencies": {
@@ -23,6 +25,7 @@
     "@testing-library/preact": "^2.0.0",
     "@testing-library/preact-hooks": "^1.1.0",
     "@types/chai": "^4.2.14",
+    "@types/react-query": "^1.1.2",
     "@web/test-runner": "^0.10.0",
     "chai": "^4.2.0",
     "graphql": "^15.4.0",
