--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "@graphql-codegen/near-operation-file-preset": "^1.17.13",
     "@graphql-codegen/typescript-react-query": "^0.1.1",
     "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "clsx": "^1.1.1",
     "preact": "^10.0.0",
-    "react-query": "^3.4.0",
-    "svgo": "^1.3.2"
+    "react-query": "^3.4.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.19.4",
@@ -31,6 +32,7 @@
     "graphql": "^15.4.0",
     "prettier": "^2.0.5",
     "snowpack": "^2.18.4",
+    "svgo": "^1.3.2",
     "typescript": "^4.0.3"
   }
 }
