--- a/package.json
+++ b/package.json
@@ -1,38 +1,41 @@
 {
-  "scripts": {
-    "start": "snowpack dev",
-    "build": "snowpack build",
-    "test": "web-test-runner --port 7890 \"src/**/*.test.tsx\"",
-    "format": "prettier --write \"src/**/*.{js,jsx}\"",
-    "lint": "prettier --check \"src/**/*.{js,jsx}\""
-  },
   "dependencies": {
     "@graphql-codegen/near-operation-file-preset": "^1.17.13",
     "@graphql-codegen/typescript-react-query": "^0.1.1",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "clsx": "^1.1.1",
-    "preact": "^10.0.0",
+    "preact": "^10.5.7",
+    "preact-render-to-string": "^5.1.12",
+    "react": "npm:@preact/compat",
+    "react-dom": "npm:@preact/compat",
     "react-query": "^3.4.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.19.4",
     "@graphql-codegen/typescript": "^1.19.0",
     "@graphql-codegen/typescript-operations": "^1.17.12",
-    "@prefresh/snowpack": "^2.0.1",
-    "@snowpack/plugin-dotenv": "^2.0.5",
-    "@snowpack/plugin-typescript": "^1.1.1",
-    "@snowpack/web-test-runner-plugin": "^0.1.5",
     "@testing-library/preact": "^2.0.0",
     "@testing-library/preact-hooks": "^1.1.0",
     "@types/chai": "^4.2.14",
     "@types/react-query": "^1.1.2",
     "@web/test-runner": "^0.10.0",
     "chai": "^4.2.0",
+    "express": "^4.17.1",
     "graphql": "^15.4.0",
+    "http-proxy-middleware": "^1.0.6",
+    "next": "^10.0.4",
+    "next-plugin-preact": "^3.0.3",
     "prettier": "^2.0.5",
-    "snowpack": "^2.18.4",
     "svgo": "^1.3.2",
     "typescript": "^4.0.3"
+  },
+  "scripts": {
+    "build": "next build",
+    "start": "node server.mjs",
+    "format": "prettier --write \"src/**/*.{js,jsx}\"",
+    "lint": "prettier --check \"src/**/*.{js,jsx}\"",
+    "start:built": "next start",
+    "test": "web-test-runner --port 7890 \"src/**/*.test.tsx\""
   }
 }
