--- a/package.json
+++ b/package.json
@@ -4,19 +4,15 @@
     "@graphql-codegen/typescript-react-query": "^0.1.1",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "@testing-library/react-hooks": "^3.7.0",
     "clsx": "^1.1.1",
-    "preact": "^10.5.7",
-    "preact-render-to-string": "^5.1.12",
-    "react": "npm:@preact/compat",
-    "react-dom": "npm:@preact/compat",
     "react-query": "^3.4.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.19.4",
     "@graphql-codegen/typescript": "^1.19.0",
     "@graphql-codegen/typescript-operations": "^1.17.12",
-    "@testing-library/preact": "^2.0.0",
-    "@testing-library/preact-hooks": "^1.1.0",
+    "@testing-library/react": "^11.2.2",
     "@types/chai": "^4.2.14",
     "@types/react-query": "^1.1.2",
     "@web/test-runner": "^0.10.0",
@@ -25,7 +21,6 @@
     "graphql": "^15.4.0",
     "http-proxy-middleware": "^1.0.6",
     "next": "^10.0.4",
-    "next-plugin-preact": "^3.0.3",
     "prettier": "^2.0.5",
     "svgo": "^1.3.2",
     "typescript": "^4.0.3"
