--- a/package.json
+++ b/package.json
@@ -6,16 +6,22 @@
     "@material-ui/icons": "^4.11.2",
     "@testing-library/react-hooks": "^3.7.0",
     "clsx": "^1.1.1",
+    "lodash": "^4.17.20",
     "react-query": "^3.4.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.19.4",
+    "@graphql-codegen/typed-document-node": "^1.18.2",
     "@graphql-codegen/typescript": "^1.19.0",
+    "@graphql-codegen/typescript-graphql-files-modules": "^1.18.1",
     "@graphql-codegen/typescript-operations": "^1.17.12",
+    "@graphql-typed-document-node/core": "^3.1.0",
     "@testing-library/react": "^11.2.2",
     "@types/chai": "^4.2.14",
+    "@types/lodash": "^4.14.166",
     "@types/react-query": "^1.1.2",
     "@web/test-runner": "^0.10.0",
+    "add": "^2.0.6",
     "chai": "^4.2.0",
     "express": "^4.17.1",
     "graphql": "^15.4.0",
@@ -23,7 +29,8 @@
     "next": "^10.0.4",
     "prettier": "^2.0.5",
     "svgo": "^1.3.2",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "build": "next build",
