--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@graphql-codegen/typed-document-node": "^1.18.2",
     "@graphql-codegen/typescript": "^1.19.0",
     "@graphql-codegen/typescript-graphql-files-modules": "^1.18.1",
+    "@graphql-codegen/typescript-graphql-request": "^3.0.0",
     "@graphql-codegen/typescript-operations": "^1.17.12",
     "@graphql-typed-document-node/core": "^3.1.0",
     "@testing-library/react": "^11.2.2",
